backend/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-label
  template:
    metadata:
      labels:
        app: back-label
    spec:
      containers:
      - name: back-container
        image: abhishek661/back-image:latest
        ports:
        - containerPort: 5000
