backend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back-label
  ports:
  - port: 5000
    targetPort: 5000
