backend/k8s/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: back-ingres
spec:
  rules:
  - hosts: backend.app
    http:
